--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.1.3",
+    "lucide-react": "^0.473.0",
     "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
